2009-07-17  Peter Kasting  <pkasting@google.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=27323
        Avoid error spew on Macs, and fix a few other tiny details.

        * Scripts/svn-create-patch:

2009-07-17  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Dave Levin.

        https://bugs.webkit.org/show_bug.cgi?id=27377
        This makes cpplint complain about this for instance:

            if (true)
            {
                int foo;
            }

        Add the appropriate unit tests.

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-17  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Dave Levin.

        https://bugs.webkit.org/show_bug.cgi?id=27377
        Don't filter whitespace at the end of the line.  This is not
        explicitly a rule of webkit coding style, but there is no reason
        not to warn of this common style problem.

        Don't filter whitespace newline. Now, cpplint will complain
        about the following situation:

            if (true) {
                doSomething();
                doSomethingAgain();
            }
            else
                doSomething();

        Which is a webkit coding style rule violation.

        * Scripts/modules/cpplint.py:

2009-07-17  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Dave Levin.

        https://bugs.webkit.org/show_bug.cgi?id=27377
        Move this comment to where it belongs.

        * Scripts/modules/cpplint_unittest.py:

2009-07-17  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Adam Roben.

        Correct crash in WinLauncher due to improper mixing of BSTR
        and TCHAR types.
        https://bugs.webkit.org/show_bug.cgi?id=27381

        * WinLauncher/WinLauncher.cpp:
        (loadURL): Perform SysReAllocString to update the BSTR with
          the contents of the TCHAR string.
