@@ -1,3 +1,13 @@
+2009-07-17  David Levin  <levin@chromium.org>
+
+        Reviewed by Adam Treat.
+
+        WebKit should have a bash completion script to aid with common commands.
+        https://bugs.webkit.org/show_bug.cgi?id=27374
+
+        * Scripts/webkit-tools-completion.sh: The script which enables option completion
+          for several WebKit command line scripts.
+
 2009-07-17  Peter Kasting  <pkasting@google.com>
 
         Reviewed by David Kilzer.
